golden/error/runtime_condition_not_bool.test
if 0 then "false" else "true"

# output:
 --> stdin:1:3
  |
1 | if 0 then "false" else "true"
  |    ^
Error: Condition should be a boolean.
